Convert tests to testr, add flake8 tox command

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,16 @@
 [tox]
-envlist = py26, py27, py33
+envlist = py26, py27, py33, pypy, pep8
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/requests-mock
-commands = python setup.py test
+commands = python setup.py testr
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/test-requirements.txt
+
+[testenv:pep8]
+commands = flake8 requests_mock
+deps =
+    flake8
+    {[testenv]deps}
