--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,27 @@
+[metadata]
+name = requests-mock
+author = Jamie Lennox
+author-email = jamielennox@gmail.com
+summary = Mock out responses from the requests package
+description-file = README.rst
+license = Apache-2
+classifier =
+    Development Status :: 2 - Pre-Alpha
+    Intended Audience :: Developers
+    Intended Audience :: Information Technology
+    License :: OSI Approved :: Apache Software License
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 2
+    Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 2.6
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.3
+    Topic :: Software Development :: Testing
+test_suite = requests_mock.tests
+
+[files]
+packages = requests_mock
+
 [wheel]
 universal = 1
