Enable coverage testing
For whatever reason I couldn't make this work with testr, so at least
for now the tests will have to go through the testtools runner.

--- a/tox.ini
+++ b/tox.ini
@@ -14,3 +14,12 @@ commands = flake8 requests_mock
 deps =
     flake8
     {[testenv]deps}
+
+[testenv:coverage]
+commands =
+    coverage erase
+    coverage run --source requests_mock -m testtools.run discover
+    coverage html
+deps =
+    coverage
+    {[testenv]deps}
