--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ python:
   - "pypy"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements.txt -r test-requirements.txt
+install: pip install coverage coveralls -r requirements.txt -r test-requirements.txt
 
 # command to run tests, e.g. python setup.py test
-script: python setup.py testr
+script: coverage run -m testtools.run discover
+
+after_success:
+    coveralls
