--- a/tox.ini
+++ b/tox.ini
@@ -23,3 +23,11 @@ commands =
 deps =
     coverage
     {[testenv]deps}
+
+[testenv:doctest]
+# note this only works under python 3 because of unicode literals
+commands =
+    python -m doctest README.rst
+deps =
+    ipdb
+    {[testenv]deps}
