Set some metadata options

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ author-email = jamielennox@gmail.com
 summary = Mock out responses from the requests package
 description-file = README.rst
 license = Apache-2
+home-page = https://github.com/jamielennox/requests-mock
 classifier =
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
