Set classifier to Alpha

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ description-file = README.rst
 license = Apache-2
 home-page = https://github.com/jamielennox/requests-mock
 classifier =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     Intended Audience :: Developers
     Intended Audience :: Information Technology
     License :: OSI Approved :: Apache Software License
