Remove wheel from dependencies
I might be wrong here, but i think wheel should only be needed during
upload time for bdist_wheel. Having it in requirements.txt like that
means that pbr will pick it up as an actual dependency.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
   - "pypy"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install coverage coveralls -r requirements.txt -r test-requirements.txt
+install: pip install coverage coveralls wheel -r requirements.txt -r test-requirements.txt
 
 # command to run tests, e.g. python setup.py test
 script: coverage run -m testtools.run discover
