--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,12 @@ deps =
 # note this only works under python 3 because of unicode literals
 commands =
     python -m doctest README.rst
+
+[testenv:sphinx-doctest]
+# note this only works under python 3 because of unicode literals
+commands =
+    mkdir build/sphinx/doctest
+    sphinx-build -b doctest docs build/sphinx/doctest
 deps =
-    ipdb
+    pbr
     {[testenv]deps}
