Fix tests running for zuul
- Add Sphinx to test-requirements
- Add a venv environment to tox for zuul runner.
- Fix pep8 issue in tests.

Change-Id: I742802381e588790a86d00371829dc88d21c9e64

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,9 @@ deps =
     flake8
     {[testenv]deps}
 
+[testenv:venv]
+commands = {posargs}
+
 [testenv:coverage]
 commands =
     coverage erase
