Remove some github specific jobs
Remove Travis file, and links to travis buttons from readme.
Change homepage to the docs site, rather than personal github repo.

Change-Id: Ic6f279f9f243081c50b80a13ee1158dd181ff8cd

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ author-email = jamielennox@gmail.com
 summary = Mock out responses from the requests package
 description-file = README.rst
 license = Apache-2
-home-page = https://github.com/jamielennox/requests-mock
+home-page = https://requests-mock.readthedocs.org/
 classifier =
     Development Status :: 3 - Alpha
     Intended Audience :: Developers
