Add keystoneclient and novaclient tests to tox
We want to be able to test changes in requests-mock against some of our
consumers to ensure we don't break anyone.

Change-Id: I029c25d7274e0d7638d85cbf3dc6c42aad3a5463

--- a/tox.ini
+++ b/tox.ini
@@ -40,3 +40,23 @@ commands =
 deps =
     pbr
     {[testenv]deps}
+
+[testenv:keystoneclient-tip]
+deps =
+    {[testenv]deps}
+    -egit+http://git.openstack.org/cgit/openstack/python-keystoneclient#egg=python-keystoneclient
+changedir = {envdir}/src/python-keystoneclient
+commands =
+    {envbindir}/pip install -r requirements.txt -r test-requirements.txt
+    {envbindir}/pip install pbr -t {envsitepackagesdir} # work around pbr being build installed in {toxinidir}
+    python setup.py testr --testr-args='{posargs}'
+
+[testenv:novaclient-tip]
+deps =
+    {[testenv]deps}
+    -egit+http://git.openstack.org/cgit/openstack/python-novaclient#egg=python-novaclient
+changedir = {envdir}/src/python-novaclient
+commands =
+    {envbindir}/pip install -r requirements.txt -r test-requirements.txt
+    {envbindir}/pip install pbr -t {envsitepackagesdir} # work around pbr being build installed in {toxinidir}
+    python setup.py testr --testr-args='{posargs}'
