Create a tox env for requests v1.2.3
Requests 1.2.3 seems to be a real pain, it's right before the v2.0
cleanup and there have been a number of inconsistencies. Create a tox
environment for checking them, and we should really gate on this as
well.

Change-Id: I343b9b7124a6bfb8e1fb711a286b8a896f50fc7b

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,11 @@ deps =
     coverage
     {[testenv]deps}
 
+[testenv:requests123]
+commands =
+    {envbindir}/pip install "requests==1.2.3"
+    python setup.py testr --testr-args='{posargs}'
+
 [testenv:doctest]
 # note this only works under python 3 because of unicode literals
 commands =
