Run tip tests against requests master as well
When running the keystoneclient and novaclient tip tests we should run
against the development branch of requests as well so that we are not
surprised by new releases upstream.

Change-Id: Iac36c91adbdf2b6fa8444d15aa8f9dee66f7e297
Related-Bug: #1363632

--- a/tox.ini
+++ b/tox.ini
@@ -48,8 +48,10 @@ deps =
 
 [testenv:keystoneclient-tip]
 deps =
-    {[testenv]deps}
+    six
+    -r{toxinidir}/test-requirements.txt
     -egit+http://git.openstack.org/cgit/openstack/python-keystoneclient#egg=python-keystoneclient
+    -egit+https://github.com/kennethreitz/requests.git#egg=requests
 changedir = {envdir}/src/python-keystoneclient
 commands =
     {envbindir}/pip install -r requirements.txt -r test-requirements.txt
@@ -58,8 +60,10 @@ commands =
 
 [testenv:novaclient-tip]
 deps =
-    {[testenv]deps}
+    six
+    -r{toxinidir}/test-requirements.txt
     -egit+http://git.openstack.org/cgit/openstack/python-novaclient#egg=python-novaclient
+    -egit+https://github.com/kennethreitz/requests.git#egg=requests
 changedir = {envdir}/src/python-novaclient
 commands =
     {envbindir}/pip install -r requirements.txt -r test-requirements.txt
