--- a/tox.ini
+++ b/tox.ini
@@ -69,3 +69,7 @@ commands =
     {envbindir}/pip install -r requirements.txt -r test-requirements.txt
     {envbindir}/pip install pbr -t {envsitepackagesdir} # work around pbr being build installed in {toxinidir}
     python setup.py testr --testr-args='{posargs}'
+
+[testenv:docs]
+commands = python setup.py build_sphinx
+    
