Add pbr to all tox environments
Doc builds are failing, apparently it's fixed by having pbr installed.
PBR really should be installed in all tox environments so just put it in
the main tox deps.

Change-Id: Iffc9a343d2953800a0afb4a92a5a6835e868994d

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ commands = python setup.py testr
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/test-requirements.txt
+    pbr
 
 [testenv:pep8]
 commands = flake8 requests_mock
@@ -72,4 +73,3 @@ commands =
 
 [testenv:docs]
 commands = python setup.py build_sphinx
-    
