Update novaclient and keystoneclient git repo
The locations provided are no longer available. The cgit portion of the
URL has been removed.

Switch to https:// for transport.

Closes-Bug: #1402501
Change-Id: I7216259dcbae2104ee4a4dba6a451e11b14d3214

--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ deps =
 deps =
     six
     -r{toxinidir}/test-requirements.txt
-    -egit+http://git.openstack.org/cgit/openstack/python-keystoneclient#egg=python-keystoneclient
+    -egit+https://git.openstack.org/openstack/python-keystoneclient#egg=python-keystoneclient
     -egit+https://github.com/kennethreitz/requests.git#egg=requests
 changedir = {envdir}/src/python-keystoneclient
 commands =
@@ -63,7 +63,7 @@ commands =
 deps =
     six
     -r{toxinidir}/test-requirements.txt
-    -egit+http://git.openstack.org/cgit/openstack/python-novaclient#egg=python-novaclient
+    -egit+https://git.openstack.org/openstack/python-novaclient#egg=python-novaclient
     -egit+https://github.com/kennethreitz/requests.git#egg=requests
 changedir = {envdir}/src/python-novaclient
 commands =
