Change dev status classifier to stable
We've been using requests-mock in openstack testing now for quite some
time without issue. The interface has been stable since about 0.3.

Change the classifier to stable and the next release will be a 1.0

Change-Id: I8ab3121a04c2b69f2a9cef2f9d4d662b527387fb

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ description-file = README.rst
 license = Apache-2
 home-page = https://requests-mock.readthedocs.org/
 classifier =
-    Development Status :: 3 - Alpha
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
     Intended Audience :: Information Technology
     License :: OSI Approved :: Apache Software License
