Add tox environment to run against master requests
Add a new environment that will install the latest development version
of requests. This lets you check for anything new coming down that might
bite us in upcoming releases.

Change-Id: I3dfaf79c681c5c4075b387947d797285c011cb88

--- a/tox.ini
+++ b/tox.ini
@@ -73,3 +73,9 @@ commands =
 
 [testenv:docs]
 commands = python setup.py build_sphinx
+
+[testenv:requests-tip]
+deps =
+    six
+    -egit+https://github.com/kennethreitz/requests.git#egg=requests
+    -r{toxinidir}/test-requirements.txt
