Fix docs building
As part of review [1] the openstack build system assumes the layout of
the docs directories to be doc/build. This is not what requests-mock was
producing. Fix the docs building directories to make it work with the
build system again.

[1] Icb0c02dc5b6f7b5e248e0df6d6093c29535b08f3

Closes-Bug: #1630114
Change-Id: Iea93ecfb0506d5ccd0b79ad35f5677797fadf730

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,11 @@ test_suite = requests_mock.tests
 [files]
 packages = requests_mock
 
+[build_sphinx]
+all_files = 1
+build-dir = doc/build
+source-dir = doc/source
+
 [wheel]
 universal = 1
 
