Move tests outside of package to top level directory
Cleanly separates tests from the package itself. Prevents the tests
being installed to site-packages.Tests are still distributed with the
source distribution.

Change-Id: I2dc75d006b0f1eec2f6123b624ade4991a2704e8

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ classifier =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.4
     Topic :: Software Development :: Testing
-test_suite = requests_mock.tests
+test_suite = tests
 
 [files]
 packages = requests_mock
