--- a/.testr.conf
+++ b/.testr.conf
@@ -1,4 +1,4 @@
 [DEFAULT]
-test_command=python -m subunit.run discover requests_mock $LISTOPT $IDOPTION
+test_command=python -m subunit.run discover $LISTOPT $IDOPTION
 test_id_option=--load-list $IDFILE
 test_list_option=--list
