Add pytest plugin
pytest has a different way of loading modules. We define a plugin by the
name of requests_mock that can be referenced from a pytest suite and it
will be automatically be loaded.

Closes: #28

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,3 +39,7 @@ universal = 1
 [extras]
 fixture =
   fixtures
+
+[entry_points]
+pytest11 =
+    requests_mock = requests_mock.contrib._pytest_plugin
