--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,9 @@ envlist = py36,py35,py34,py27,pypy,pep8
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/requests-mock
-commands = python setup.py testr
+commands =
+    pytest tests/pytest
+    python setup.py testr
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/test-requirements.txt
