Include release-notes in documentation
reno was being used by openstack to generate release notes, but since
the migration we've not done anything with them. It's a great tool and
we should maintain and publish a release note that is more applicable
that tne changelog generated by PBR.

--- a/tox.ini
+++ b/tox.ini
@@ -73,6 +73,9 @@ commands =
 
 [testenv:docs]
 commands = python setup.py build_sphinx
+deps =
+    -r{toxinidir}/rtfd-requirements.txt
+    {[testenv]deps}
 
 [testenv:requests-tip]
 deps =
