--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
           command: |
             python3 -m venv venv
             source venv/bin/activate
-            pip install twine wheel
+            pip install twine wheel reno
             python setup.py sdist bdist_wheel
             twine upload dist/*
 
