--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,37 @@ jobs:
             source venv/bin/activate
             tox -e py27
 
+  oldest:
+    docker:
+      - image: circleci/python:3.6
+
+    steps:
+      - checkout
+
+      - restore_cache:
+          keys:
+            - oldest-dependencies-{{ checksum "requirements.txt" }}-{{ checksum "test-requirements.txt" }}
+
+      - run:
+          name: install dependencies
+          command: |
+            python3 -m venv venv
+            source venv/bin/activate
+            pip3 install tox
+            tox -e oldest-requirements --notest
+
+      - save_cache:
+          paths:
+            - ./venv
+            - .tox/py36
+          key: oldest-dependencies-{{ checksum "requirements.txt" }}-{{ checksum "test-requirements.txt" }}
+
+      - run:
+          name: run tests
+          command: |
+            source venv/bin/activate
+            tox -e py36
+
   pypi:
     docker:
       - image: circleci/python:3.6
@@ -92,10 +123,16 @@ workflows:
             tags:
               only: /^\d+\.\d+\.\d+$/
 
+      - oldest:
+          filters:
+            tags:
+              only: /^\d+\.\d+\.\d+$/
+
       - pypi:
           requires:
             - py27
             - py36
+            - oldest
           filters:
             branches:
               ignore: /.*/
