--- a/tox.ini
+++ b/tox.ini
@@ -30,10 +30,14 @@ deps =
     coverage
     {[testenv]deps}
 
-[testenv:requests123]
+[testenv:oldest-requirements]
+install_command = pip install -U {opts} -c {toxinidir}/.tox.oldest.txt {packages}
 commands =
-    {envbindir}/pip install "requests==1.2.3"
     python setup.py testr --testr-args='{posargs}'
+deps =
+    -r{toxinidir}/test-requirements.txt
+    -c{toxinidir}/.tox.oldest.txt
+    pbr
 
 [testenv:doctest]
 # note this only works under python 3 because of unicode literals
