--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -6,6 +6,7 @@ on:
 jobs:
   unittest:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         python-version:
@@ -36,5 +37,11 @@ jobs:
         run: python setup.py testr
 
       - name: Test PyTest
-        run: pytest tests/pytest
+        run: pytest --junitxml=junit/unittest-results-${{ matrix.python-version }}.xml tests/pytest
 
+      - uses: actions/upload-artifact@v2
+        with:
+          name: pytest-results-${{ matrix.python-version }}
+          path: junit/unittest-results-${{ matrix.python-version }}.xml
+        # Use always() to always run this step to publish test results when there are test failures
+        if: ${{ always() }}
