Flake8 only certain dirs

--- a/.github/workflows/flake8.yaml
+++ b/.github/workflows/flake8.yaml
@@ -23,4 +23,4 @@ jobs:
     - name: Lint with flake8
       run: |
         pip install flake8
-        flake8 .
+        flake8 requests_mock tests
