--- a/.github/workflows/flake8.yaml
+++ b/.github/workflows/flake8.yaml
@@ -19,8 +19,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install flake8
 
     - name: Lint with flake8
-      run: |
-        pip install flake8
-        flake8 requests_mock tests
+      run: flake8 requests_mock tests
