--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37,py36,py35,py34,py27,pypy3,pypy,pep8
+envlist = py39,py38,py37,py36,py35,py34,py27,pypy3,pypy,pep8
 
 [testenv]
 setenv =
