Add [PEP 484](https://www.python.org/dev/peps/pep-0484/) type hints.
For #94

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ test_suite = tests
 
 [files]
 packages = requests_mock
+package-data = requests_mock = py.typed, *.pyi
 
 [build_sphinx]
 all_files = 1
