temporarily less restrictive

--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -1,6 +1,12 @@
 name: Upload Python Package
 
 on:
+  push:
+    branches:
+      - publish-action
+    tags:
+      - "test-v*"
+
   release:
     types: [created]
 
