--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,7 +39,7 @@ jobs:
           if-no-files-found: error
 
   pypi:
-    name: Push to PyPI
+    name: Create Github Release
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -54,6 +54,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          name: ${{ github.ref }}
           prerelease: true
           draft: true
           files: |
