add GitHub URL for PyPi

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,8 @@ description_file = README.rst
 license = Apache-2
 license_file = LICENSE
 home_page = https://requests-mock.readthedocs.io/
+project_urls =
+    Source = https://github.com/jamielennox/requests-mock
 classifier =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
