Remove dependency on pbr. Update metadata to resolve from declarative config in setup.cfg. Fixes #218.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,14 +2,13 @@
 name = requests-mock
 author = Jamie Lennox
 author_email = jamielennox@gmail.com
-summary = Mock out responses from the requests package
-description_file = README.rst
+description = Mock out responses from the requests package
+long_description = file:README.rst
 license = Apache-2
-license_file = LICENSE
-home_page = https://requests-mock.readthedocs.io/
+url = https://requests-mock.readthedocs.io/
 project_urls =
     Source = https://github.com/jamielennox/requests-mock
-classifier =
+classifiers =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
     Intended Audience :: Information Technology
@@ -25,11 +24,13 @@ classifier =
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
     Topic :: Software Development :: Testing
-test_suite = tests
 
-[files]
+[options]
 packages = requests_mock
-package-data = requests_mock = py.typed, *.pyi
+include_package_data = true
+install_requires =
+    requests>=2.22,<3
+    six
 
 [build_sphinx]
 all_files = 1
@@ -39,11 +40,11 @@ source-dir = doc/source
 [bdist_wheel]
 universal = 1
 
-[extras]
+[options.extras_require]
 fixture =
   fixtures
 
-[entry_points]
+[options.entry_points]
 pytest11 =
     requests_mock = requests_mock.contrib._pytest_plugin
 
