Remove dependency on pbr. Update metadata to resolve from declarative config in setup.cfg. Run all tests using pytest. Fixes #218.

--- a/tox.ini
+++ b/tox.ini
@@ -9,12 +9,9 @@ envlist =
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/requests-mock
 commands =
-    pytest tests/pytest
-    python setup.py testr
+    pytest
 deps =
-    -r{toxinidir}/requirements.txt
     -r{toxinidir}/test-requirements.txt
-    pbr
 
 [testenv:pep8]
 commands = flake8 requests_mock tests
