build(typing): add type hinting linting using MyPy

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,3 +50,7 @@ fixture =
 [entry_points]
 pytest11 =
     requests_mock = requests_mock.contrib._pytest_plugin
+
+[mypy]
+[mypy-fixtures]
+ignore_missing_imports = True
