--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
     pypy
     pypy3
     pep8
+    typing
 
 [testenv]
 setenv =
@@ -92,3 +93,8 @@ deps =
     six
     -egit+https://github.com/kennethreitz/requests.git#egg=requests
     -r{toxinidir}/test-requirements.txt
+
+[testenv:typing]
+commands = mypy requests_mock
+deps =
+    -r{toxinidir}/typing-requirements.txt
