Remove nova/keystone tip tests and fix requests-tip
It used to be important that requests-mock didn't break compatibility
with nova or keystoneclient. This hasn't been a thing for a long time
and those tests don't work any more.

Scrap these old tests and ensure the requests-tip one is still actually
working.

--- a/tox.ini
+++ b/tox.ini
@@ -58,30 +58,6 @@ deps =
     pbr
     {[testenv]deps}
 
-[testenv:keystoneclient-tip]
-deps =
-    six
-    -r{toxinidir}/test-requirements.txt
-    -egit+https://git.openstack.org/openstack/python-keystoneclient#egg=python-keystoneclient
-    -egit+https://github.com/kennethreitz/requests.git#egg=requests
-changedir = {envdir}/src/python-keystoneclient
-commands =
-    {envbindir}/pip install -r requirements.txt -r test-requirements.txt
-    {envbindir}/pip install pbr -t {envsitepackagesdir} # work around pbr being build installed in {toxinidir}
-    python setup.py testr --testr-args='{posargs}'
-
-[testenv:novaclient-tip]
-deps =
-    six
-    -r{toxinidir}/test-requirements.txt
-    -egit+https://git.openstack.org/openstack/python-novaclient#egg=python-novaclient
-    -egit+https://github.com/kennethreitz/requests.git#egg=requests
-changedir = {envdir}/src/python-novaclient
-commands =
-    {envbindir}/pip install -r requirements.txt -r test-requirements.txt
-    {envbindir}/pip install pbr -t {envsitepackagesdir} # work around pbr being build installed in {toxinidir}
-    python setup.py testr --testr-args='{posargs}'
-
 [testenv:docs]
 commands = python setup.py build_sphinx
 deps =
@@ -91,7 +67,7 @@ deps =
 [testenv:requests-tip]
 deps =
     six
-    -egit+https://github.com/kennethreitz/requests.git#egg=requests
+    -e "git+https://github.com/kennethreitz/requests.git\#egg=requests"
     -r{toxinidir}/test-requirements.txt
 
 [testenv:typing]
