Remove testrepository dependency
testrepository was an openstack concept necessary when you had a lot
more tests than we do. It appears to be abandoned.

Remove the dependency and go back to testtools.run for a launcher.

--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -38,7 +38,7 @@ jobs:
           pip install -e .
 
       - name: Test Testtools
-        run: python setup.py testr
+        run: python -m testtools.run discover
 
       - name: Test PyTest
         run: pytest tests/pytest
@@ -66,7 +66,7 @@ jobs:
           pip install -e .
 
       - name: Test Testtools
-        run: python setup.py testr
+        run: python -m testtools.run discover
 
       - name: Test PyTest
         run: pytest tests/pytest
