--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/requests-mock
 commands =
     pytest tests/pytest
-    python setup.py testr
+    python -m testtools.run {posargs:discover}
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/test-requirements.txt
@@ -38,7 +38,7 @@ deps =
 [testenv:oldest-requirements]
 install_command = pip install -U {opts} -c {toxinidir}/.tox.oldest.txt {packages}
 commands =
-    python setup.py testr --testr-args='{posargs}'
+    python -m testtools.run {posargs:discover}
 deps =
     -r{toxinidir}/test-requirements.txt
     -c{toxinidir}/.tox.oldest.txt
