Use python 3.8 for oldest.
Seems like something is wrong with python 3.12 and older versions of
urllib.

--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -50,7 +50,7 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.8'
           architecture: 'x64'
 
       - uses: actions/cache@v3
