--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,11 +22,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel reno
+          pip install build setuptools wheel reno
 
       - name: Build and publish
         run: |
-          python setup.py sdist bdist_wheel
+          python -m build
 
       - uses: actions/upload-artifact@v3
         with:
