--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ classifiers =
 [options]
 packages = requests_mock
 include_package_data = true
+python_requires = >=3.5
 install_requires =
     requests>=2.22,<3
 
