Replace the last use of pbr with modern packaging
Replace the one last use of pbr in Sphinx configuration with the modern
combination of importlib.metadata (builtin) + packaging.  Besides
avoiding the dependency, it fixes handling VCS versions, that make pbr
crash:

```
Traceback (most recent call last):
  File "/tmp/requests-mock/.tox/docs/lib/python3.12/site-packages/sphinx/config.py", line 358, in eval_config_file
    exec(code, namespace)  # NoQA: S102
    ^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/requests-mock/doc/source/conf.py", line 59, in <module>
    version = version_info.version_string()
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/requests-mock/.tox/docs/lib/python3.12/site-packages/pbr/version.py", line 505, in version_string
    return self.semantic_version().brief_string()
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/requests-mock/.tox/docs/lib/python3.12/site-packages/pbr/version.py", line 498, in semantic_version
    self._semantic = self._get_version_from_importlib_metadata()
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/requests-mock/.tox/docs/lib/python3.12/site-packages/pbr/version.py", line 483, in _get_version_from_importlib_metadata
    return SemanticVersion.from_pip_string(result_string)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/requests-mock/.tox/docs/lib/python3.12/site-packages/pbr/version.py", line 156, in from_pip_string
    return klass._from_pip_string_unsafe(version_string)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/requests-mock/.tox/docs/lib/python3.12/site-packages/pbr/version.py", line 226, in _from_pip_string_unsafe
    dev_count = int(component[3:])
                ^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '63+gfba8cc7'
```

--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,6 @@ commands =
 deps =
     -r{toxinidir}/test-requirements.txt
     -c{toxinidir}/.tox.oldest.txt
-    pbr
 
 [testenv:doctest]
 # note this only works under python 3 because of unicode literals
@@ -53,7 +52,7 @@ commands =
     mkdir build/sphinx/doctest
     sphinx-build -b doctest docs build/sphinx/doctest
 deps =
-    pbr
+    packaging
     {[testenv]deps}
 
 [testenv:docs]
