--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt -r test-requirements.txt pbr
+          python -m pip install -r requirements.txt -r test-requirements.txt
           pip install -e .
 
       - name: Test Testtools
@@ -61,7 +61,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -r oldest-requirements.txt -r test-requirements.txt pbr
+          python -m pip install -r oldest-requirements.txt -r test-requirements.txt
           pip install -e .
 
       - name: Test Testtools
